--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,7 +1,7 @@
 <div>
-    <div class="greeting text-blue">EXPERTISE</div>
-    <p class="fs-3 fw-bold my-3">Our experience & services</p>
-    <p class="text-secondary mb-3">We're a diverse team of designers, developers, and strategists who are passionate about<br /> creating exceptional digital experiences that solve real problems.</p>
+    <div class="greeting text-blue">Our Work</div>
+    <p class="fs-3 fw-bold my-3">Featured projects</p>
+    <p class="text-secondary mb-3">Explore our portfolio of recent projects showcasing our expertise in web development, mobile applications, and interactive experiences.</p>
 </div>
 <div class="row">
     <div *ngFor="let project of (showAllProjects ? projects : projects.slice(0, 3))" class="col-lg-4 col-md-6 col-sm-12 mb-5"  @enterLeaveAnimation5>
