--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -67,6 +67,19 @@
     <div class="home-section" #homeSection id="experience">
         <app-experience></app-experience>
     </div>
+
+    <div class="home-section" #homeSection>
+        <div class="rounded-4 primary-border bg-secondary display-content align-items-center py-5 px-3 gap-5">
+            <div>
+                <img src="/assets/moon.svg" class="px-4 h-280" />
+            </div>
+            <div>
+                <p class="fs-3 fw-bold">Ready to start your project?</p>
+                <p class="text-secondary my-3">Let's discuss how we can help you achieve your digital goals and create exceptional experiences for your users.</p>
+            </div>
+            <!-- <button class="btn btn-primary">Get in Touch</button> -->
+        </div>
+    </div>
     
     <div class="home-section" #homeSection id="contact">
         <app-contact></app-contact>
