--- a/src/styles/_toastr.scss
+++ b/src/styles/_toastr.scss
@@ -6,11 +6,10 @@
     .ngx-toastr {
       width: 410px !important;
       background-color: #090E16 !important;
-      box-shadow: 0 0 4px 0 rgba(0, 0, 0, .3) !important;
       padding: 16px 16px 16px 54px;
       display: flex;
       margin-bottom: 12px;
-  
+
       .toastr-details {
         padding: 12px;
         width: 100%;
@@ -18,7 +17,7 @@
       }
   
       &.toast-success {
-        border: 1px solid rgb(28, 140, 28);
+        box-shadow: 0px -1px 2px rgb(28, 140, 28), 0px 3px 6px rgb(28, 140, 28);
         border-radius: 6px;
         display: flex;
         flex-direction: column;
@@ -38,7 +37,7 @@
       }
   
       &.toast-warning {
-        border: 1px solid #ff9800;
+        box-shadow: 0px -1px 2px #ff9800, 0px 3px 6px #ff9800;
         border-radius: 6px;
         display: flex;
         flex-direction: column;
@@ -62,17 +61,17 @@
       }
   
       &.toast-error {
-        border: 1px solid red;
+        box-shadow: 0px -1px 2px rgb(255, 72, 72), 0px 3px 6px rgb(255, 72, 72);
         border-radius: 6px;
         display: flex;
         flex-direction: column;
-        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='red' viewBox='0 0 16 16'%3E%3Cpath d='M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16'/%3E%3Cpath d='M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708'/%3E%3C/svg%3E");
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='rgb(255, 72, 72)' viewBox='0 0 16 16'%3E%3Cpath d='M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16'/%3E%3Cpath d='M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708'/%3E%3C/svg%3E");
         background-size: 24px 24px;
         background-repeat: no-repeat;
         background-position: 12px center;
         
         .toastr-icon {
-          background-color: red;
+          background-color: rgb(255, 72, 72);
         }
   
         .ki-cancel-circle {
@@ -80,7 +79,7 @@
         }
 
         .toast-title {
-          color: red;
+          color: rgb(255, 72, 72);
         }
   
         .toast-message {
@@ -90,7 +89,7 @@
       }
   
       &.toast-info {
-        border: 1px solid #3d2f77;
+        box-shadow: 0px -1px 2px #3d2f77, 0px 3px 6px #3d2f77;
         border-radius: 6px;
         display: flex;
         flex-direction: column;
