--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,17 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+
+  .mask-fade {
+    -webkit-mask-image: linear-gradient(
+      rgba(0, 0, 0, 0) ,
+      rgba(0, 0, 0, 1) 
+    );
+    mask-image: conic-gradient(
+      rgba(0, 0, 0, 0) 0deg,
+      rgba(0, 0, 0, 1) 
+    );
+  }
 }
 
 @layer base {
